syntax = "proto3";

option go_package = "storage";
option java_package = "io.stackrox.proto.storage";

import "google/protobuf/timestamp.proto";

package storage;

enum ResourceType {
   UNSET_RESOURCE_TYPE = 0;
   ALERT               = 1;
   PROCESS             = 2;
}

message Comment {
    ResourceType resource_type              = 1;
    string resource_id                      = 2;
    string comment_id                       = 3;
    string comment_message                  = 4;
    message User {
        string id    = 1;
        string name  = 2;
        string email = 3;
    }
    User user                               = 5;
    google.protobuf.Timestamp created_at    = 6;
    google.protobuf.Timestamp last_modified = 7;
}
